[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/deck_scene/select_use_scene.gd" type="Script" id=1]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
Button/fonts/font = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.752941, 0.752941, 0.752941, 1 )
border_width_left = 15
border_width_right = 15
border_color = Color( 0.498039, 0.498039, 0.498039, 1 )
border_blend = true

[sub_resource type="Theme" id=4]
VScrollBar/styles/scroll = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.313726, 0.313726, 0.313726, 1 )

[node name="DeckSelectScene" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="ReturnButton" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 80.0
text = "戻る"

[node name="ButtonDecide" type="Button" parent="Panel"]
margin_left = 1056.0
margin_top = 576.0
margin_right = 1248.0
margin_bottom = 640.0
text = "決定"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 264.0
margin_right = 1016.0
margin_bottom = 720.0
rect_min_size = Vector2( 720, 720 )
theme = SubResource( 4 )
custom_styles/bg = SubResource( 7 )
follow_focus = true

[node name="BannerContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true

[connection signal="pressed" from="Panel/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Panel/ButtonDecide" to="." method="_on_ButtonDecide_pressed"]
